overflow fixed

--- a/style.css
+++ b/style.css
@@ -30,13 +30,12 @@
 body,
 html {
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   background-color: #121213;
   font-size: 16px;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
   position: relative;
 }
 
